# azulejo-common-lib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  X.sln  start_apple_devenv.sh  start_unit_tests.bat  start_unit_tests.sh  vcpkg.json
Interprocess/: AsioAdapter.h  CMakeLists.txt  IConnectionHandler.h  ISharedMemory.h  RESTClient.h  RESTServer.h  TCPServer.h  TCPServer.hpp
Intraprocess/: CMakeLists.txt  IOMPRunnable.h  ThreadPool.cpp  ThreadPool.h
X/: CMakeLists.txt  CMakeSettings.json  README.md  X.sln  start_apple_devenv.sh  start_apple_gtests.sh  start_devenv.bat  start_osx_devenv.sh  start_win_devenv.bat
X/Config/: Config.vcxproj  Config.vcxproj.filters  config_boost.h  config_gtest.h
X/DatabaseAdapters/: CMakeLists.txt  DatabaseAdapters.vcxproj  DatabaseAdapters.vcxproj.filters  EntityAggregationDetabularizer.cpp  EntityAggregationDetabularizer.h  EntityAggregationDetabularizer.hpp  EntityAggregationTabularizer.cpp  EntityAggregationTabularizer.h  EntityDetabularizer.cpp  EntityDetabularizer.h  EntityHierarchyBlob.cpp  EntityHierarchyBlob.h  EntityTabularizer.cpp  EntityTabularizer.h  ITabularizableEntity.cpp  ITabularizableEntity.h  ITabularizableResource.cpp  ITabularizableResource.h  ResourceDetabularizer.cpp  ResourceDetabularizer.h  ResourceTabularizer.cpp  ResourceTabularizer.h  Sqlite.cpp  Sqlite.h  SqliteBlob.cpp  SqliteBlob.h  config.h
X/Entities/: CMakeLists.txt  Entities.vcxproj  Entities.vcxproj.filters  Entity.cpp  Entity.h  Entity.hpp  EntityAggregationDeserializer.cpp  EntityAggregationDeserializer.h  EntityAggregationDeserializer.hpp  EntityAggregationSerializer.cpp  EntityAggregationSerializer.h  EntityHierarchy.cpp  EntityHierarchy.h  EntityRegistry.h  IClientEntity.cpp  IClientEntity.h  IOpenMPEntity.cpp  IOpenMPEntity.h  IRunnableEntity.cpp  IRunnableEntity.h  ISerializableEntity.cpp  ISerializableEntity.h  IServerEntity.cpp  IServerEntity.h  ISharedMemoryEntity.cpp  ISharedMemoryEntity.h  IStreamableEntity.cpp  IStreamableEntity.h  config.h
X/EntitiesModule/: CMakeLists.txt  EntitiesModule.cpp  EntitiesModule.vcxproj  EntitiesModule.vcxproj.filters  config.h
X/Events/: CMakeLists.txt  EventChannel.cpp  EventChannel.h  EventConsumer.h  EventConsumer.hpp  EventEmitter.cpp  EventEmitter.h  EventEmitter.hpp  Events.vcxproj  Events.vcxproj.filters  IEventConsumer.cpp  IEventConsumer.h  IEventEmitter.cpp  IEventEmitter.h  config.h  main.cpp
X/FilesystemAdapters/: CMakeLists.txt  EntityAggregationDeserializer.cpp  EntityAggregationDeserializer.h  EntityAggregationSerializer.cpp  EntityAggregationSerializer.h  EntityDeserializer.h  EntitySerializer.cpp  EntitySerializer.h  FilesystemAdapters.vcxproj  FilesystemAdapters.vcxproj.filters  ISerializableEntity.cpp  ISerializableEntity.h  ISerializableResource.cpp  ISerializableResource.h  ResourceDeserializer.cpp  ResourceDeserializer.h  ResourceDeserializer.hpp  ResourceSerializer.cpp  ResourceSerializer.h  ResourceSerializer.hpp  config.h
X/Interprocess/: AsioAdapter.h  AsioAdapter.hpp  AsyncIO.h  AsyncIO.hpp  AsyncServer.cpp  AsyncServer.h  AsyncServer.hpp  CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.h  ConnectionHandler.hpp  HTTP.cpp  HTTP.h  IClient.cpp  IClient.h  IConnectionHandler.cpp  IConnectionHandler.h  IConnectionHandler.hpp  IServer.cpp  IServer.h  ISharedMemory.cpp  ISharedMemory.h  Interprocess.vcxproj  Interprocess.vcxproj.filters  RESTClient.cpp  RESTClient.h  RESTClient.hpp  RESTServer.cpp  RESTServer.h  TCPServer.h  config.h
X/Intraprocess/: CMakeLists.txt  IOMPRunnable.cpp  IOMPRunnable.h  IOpenMP.cpp  IOpenMP.h  IRunnable.cpp  IRunnable.h  Intraprocess.vcxproj  Intraprocess.vcxproj.filters  ThreadPool.cpp  ThreadPool.h  ThreadPool.hpp  config.h
X/JavaApp/: JavaApp.py  JavaApp.pyproj
X/Main/: JavaApp.py  JavaApp.pyproj
X/Resources/: CMakeLists.txt  IResource.cpp  IResource.h  IResource.hpp  Resource.h  Resource.hpp  Resource2D.h  Resource2D.hpp  ResourceDeserializer.cpp  ResourceDeserializer.h  ResourceDeserializer.hpp  ResourceSerializer.cpp  ResourceSerializer.h  ResourceSerializer.hpp  Resources.vcxproj  Resources.vcxproj.filters  config.h
X/ResourcesModule/: CMakeLists.txt  ResourcesModule.cpp  ResourcesModule.vcxproj  ResourcesModule.vcxproj.filters  config.h
X/X/: Entity.cpp  Entity.h  Entity.hpp  EntityAggregationDeserializer.cpp  EntityAggregationDeserializer.h  EntityAggregationDeserializer.hpp  EntityAggregationSerializer.cpp  EntityAggregationSerializer.h  IClientEntity.cpp  IClientEntity.h  INetworkableEntity.cpp  INetworkableEntity.h  IOpenMPEntity.cpp  IOpenMPEntity.h  IRunnableEntity.cpp  IRunnableEntity.h  ISerializableEntity.cpp  ISerializableEntity.h  IServerEntity.cpp  IServerEntity.h  IShareableEntity.cpp  IShareableEntity.h  ISharedMemoryEntity.cpp  ISharedMemoryEntity.h  IStreamableEntity.cpp  IStreamableEntity.h  Resource.h  Resource.hpp  X.vcxproj  X.vcxproj.filters  config.h  main.cpp
X/X_UnitTests/: X_UnitTests.vcxproj  config.h  test_entity.cpp  test_entity_aggregation_deserializer.cpp  test_entity_aggregation_serializer.cpp  test_inetworkable_entity.cpp  test_iresource.cpp  test_irunnable_entity.cpp  test_iserializable_entity.cpp  test_ishareable_entity.cpp  test_ishared_memory_entity.cpp  test_istreamable_entity.cpp  test_openmp_entity.cpp  test_resource.cpp
X/test_database_adapters/: CMakeLists.txt  ContainerResource.h  test_database_adapters.vcxproj  test_database_adapters.vcxproj.filters  test_entity_aggregation_detabularizer.cpp  test_entity_aggregation_tabularizer.cpp  test_entity_detabularizer.cpp  test_entity_tabularizer.cpp  test_itabularizable_entity.cpp  test_itabularizable_resource.cpp  test_resource_detabularizer.cpp  test_resource_tabularizer.cpp  (+2 more)
test_entities/: CMakeLists.txt  test_entity_registry.cpp  test_istreamable_entity.cpp
test_filesystem_adapters/: CMakeLists.txt  ContainerResource2D.h  config.h  test_entity_deserializer.cpp  test_iserializable_entity.cpp  test_iserializable_resource.cpp  test_iserializable_resource_2d.cpp  test_resource_deserializer.cpp  test_resource_serializer.cpp
(+313 files in other folders)
